# Claude-BSE-Connector

./: .gitignore  .mcp.json  Dockerfile  Procfile  pyproject.toml  railway.toml  render.yaml
src/bse_connector/: __init__.py  analyst.py  bse_client.py  cache.py  categories.py  resolver.py  screener.py  server.py  server_http.py  yf_utils.py  yfinance_extras.py
