[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bse-connector"
version = "0.1.0"
description = "MCP server for BSE India — fuzzy company search, quarterly financials, corporate filings"
requires-python = ">=3.10"
dependencies = [
    "bse>=3.1.0",
    "mcp>=1.8.0",
    "sse-starlette>=1.6.0",
    "python-dateutil>=2.8.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "rapidfuzz>=3.5.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
]

[project.scripts]
bse-connector = "bse_connector.server:main"
bse-connector-http = "bse_connector.server_http:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bse_connector"]
